--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "codemirror": "^5.65.13",
+    "html2pdf.js": "^0.10.1",
     "latex.js": "^0.12.6",
     "react": "^18.2.0",
     "react-codemirror2": "^7.2.1",
