Add toolbars to editor

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-tippy": "^1.4.0",
     "string-direction": "^0.1.2"
   },
   "devDependencies": {
